--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,14 @@
   background-size: cover;
   border-radius: 20px;
 }
+.about .text .video-3 {
+  width: 200px;
+  height: 130px;
+  background: url("https://panel.brightskills.com/media/course/MS%20Excel%20Beginner%20to%20Advanced/558-X-364_Course-Banner_ii-of-MS-Excel-Beginner-to-Advanced.jpg")
+    no-repeat center;
+  background-size: cover;
+  border-radius: 20px;
+}
 
 .about .text i {
   color: var(--mf-orange);
